# chaos-forge

./: .gitignore  icon.svg.import  main.tscn  node_3d.tscn  project.godot  secrets.cfg.example  test_runner.gd  test_runner.gd.uid
autoload/: api_client.gd  api_client.gd.uid  game_manager.gd  game_manager.gd.uid
data/: pitch_database.gd  starter_materials.gd  starter_materials.gd.uid
entities/: material_drop.gd  material_drop.gd.uid  monster.gd  monster.gd.uid  player.gd  player.gd.uid  ragdoll_npc.gd  ragdoll_npc.gd.uid  ragdoll_npc.tscn  weapon_instance.gd  weapon_instance.gd.uid
llmdoc/: index.md
llmdoc/agent/: block-e-implementation.md  strategy-combat-loop.md  strategy-dimension-smuggler-mvp.md  strategy-dimension-smuggler.md
llmdoc/guides/: doc-standard.md
server/: .env.example  Cargo.toml  README.md
server/migrations/: 0001_init.sql
server/src/: config.rs  db.rs  error.rs  main.rs  models.rs
server/src/routes/: health.rs  mod.rs  tripo.rs  weapons.rs
systems/: crafting_system.gd  crafting_system.gd.uid  forge_zone.gd  forge_zone.gd.uid  inventory.gd  inventory.gd.uid  model_loader.gd  model_loader.gd.uid  monster_spawner.gd  monster_spawner.gd.uid  order_generator.gd  order_generator.gd.uid  physics_inspector.gd  sales_manager.gd  weapon_attacher.gd  weapon_attacher.gd.uid
tests/: test_block_c.tscn  test_model_loader.gd  test_model_loader.gd.uid  test_physics_inspector.gd  test_sales_manager.gd  test_sales_manager.tscn
ui/: crafting_panel.gd  crafting_panel.gd.uid  crafting_panel.tscn  game_ui.gd  game_ui.gd.uid  game_ui.tscn
(+4 files in other folders)
